final fixed text overflow

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -39,6 +39,11 @@
   }
 }
 
+.home h2 {
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
 footer {
   position: absolute;
   font-size: 1rem;
