--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -75,6 +75,12 @@
   .main .social-icons {
     left: 15rem;
   }
+
+  @media screen and (max-height: 430px) {
+    .home {
+      padding-top: 25vh;
+    }
+  }
 }
 
 @include media-lg {
